--- a/styles.css
+++ b/styles.css
@@ -1,149 +1,123 @@
- @import url(https://fonts.googleapis.com/
-       css?family=Montserrat:400,700); 
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+
 
 
 body {
- color: #555;
- margin: 0;
-
- font-family: 'Montserrat', sans-serif;
+  color: #555;
+  margin: 0;
+ 
+ font-family: 'Montserrat', sans-serrif;
 }
 
-
- #header {
- background-color: #1abc9c;
- height: 150px;
- line-height: 150px;
+#header {
+  background-color: #1abc9c;
+  height: 150px;
+  line-height: 150px;
 }
 
-
- #header a {
- color: white;
- text-decoration: none;
-
- text-transform: uppercase;
- letter-spacing: 0.1em;
+#header-title {
+  display: block;
+  float: left;
+ 
+  font-size: 20px;
+  font-weight: bold;
 }
 
- #header a:hover {
- color: #222;
+#header-nav {
+  display: block;
+  float: right;
+  margin-top: 0;
 }
 
-
- #header-title {
- display: block;
- float: left;
-
- font-size: 28px;
- font-weight: bold;
- font-family: helvetica;
+#header-nav li {
+  display: inline;
+  padding-left: 20px;
 }
 
-
- #header-nav {
- display: block;
- float: right;
- margin-top: 0;
+#header a {
+  color: white;
+  text-decoration: none;
+ 
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
 }
 
-
- #header-nav li {
- display: inline;
- padding-left: 20px;
+#header a:hover {
+  color: #222;
 }
 
- .container {
+.container {
  max-width: 1000px;
  margin: 0 auto;
 }
 
-
- #footer {
- background-color: #2f2f2f;
- padding: 50px 0;
+.post, .about {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 60px 0;
 }
 
+.post-author img {
+  width: 50px;
+  height: 50px;
+  vertical-align: middle;
+}
 
- #footer h4 {
+.post-author span {
+  margin-left: 16px;
+}
+
+.post-date {
+  color: #D2D2D2;
+  
+  font-size: 14px;
+  font-weight: bold;
+ 
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+}
+ 
+#footer {
+  background-color: #2f2f2f;
+  padding: 50px 0;
+}
+
+#footer h4 {
  color: white;
  text-transform: uppercase;
  letter-spacing: 0.1em;
 }
 
- .column {
- min-width:300px;
- display: inline-block;
- vertical-align: top;
+#footer p {
+  color: white;
 }
 
- #footer p {
- color: white;
+.column {
+  min-width: 300px;
+  display: inline-block;
+  vertical-align: top;
 }
 
-
- #footer a {
- color: #00FF00;
- text-decoration: none;
-}
-
-
- .post, .about {
- max-width: 800px;
- margin: 0auto;
- padding: 60px 0;
-}
-
- .post-author img{
- width: 50px;
- height: 50px;
- vertical-align: middle;
+a {
+  color: #1abc9c;
+  text-decoration: none;
 }
  
-
- .post-author span{
- margin-left: 16px;
+a:hover {
+  color: #F6A623;
 }
 
-
- .post-date {
- color: #D2D2D2;
- 
- font-size: 14 px;
- font-weight: bold;
- 
- text-transform: uppercase;
- letter spacing: 0.1em;
- 
+p {
+  line-height: 1.5;
 }
 
-
- h1, h2, h3, h4{
- color: #333
+h1, h2, h3, h4 {
+  color: #333;
 }
 
-
- p {
- line-height: 1.5;
-}
-
-
- .about {
- text-align: center;
-}
-
-
- .post-author img,
- .about-author img {
- border-radius: 50%;
-}
-
-
- .post-container:nth-child(even) {
- background-color: #f2f2f2;
+.sman1mghy {
+  text-decoration: none;
 }
 
 
 
- #sman1mghy {
- text-decoration: none;
-}
